# telegram-beoblod-bot

./: .env.example  .gitignore  README.md  pyproject.toml
data/greetings/: prapor_greetings_insult_affectionate.txt
data/phrases/: army_movie_style_original_phrases.txt  prapor_repliki_v2.txt
deploy/: check_windows_bot.ps1  restart_windows_task.ps1  windows_task.ps1
src/morale_bot/: __init__.py  bot.py
tests/: test_bot.py
