[project]
name = "telegram-morale-bot"
version = "0.1.0"
description = "Telegram chat bot that replies with military jokes and encouraging advice when mentioned."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0,<1.0.0",
    "python-telegram-bot>=21.0,<22.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
telegram-morale-bot = "morale_bot.bot:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
